--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,13 @@
             <artifactId>spring-security-core</artifactId>
         </dependency>
         
-    
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.29.0</version>
+        </dependency>
+        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
