--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,25 @@
-# 🏷️ Tên ứng dụng
+
 spring.application.name=forddealer
 
-# 🛠️ Cấu hình kết nối MySQL
+
 spring.datasource.url=jdbc:mysql://localhost:3306/forddb
 spring.datasource.username=root
 spring.datasource.password=
 
-# 🧠 Hibernate tự động cập nhật bảng
+
 spring.jpa.hibernate.ddl-auto=update
 
-# 🐞 Hiển thị câu lệnh SQL trong console
+
 spring.jpa.show-sql=true
 
+cloudinary.url=cloudinary://611153721671968:SM2mwu0xaRwI5Cmpfmqhc0mGQLY@dn6fnxsaz
 
-
-
-# 🌐 Port chạy ứng dụng
 server.port=8081
 
-# 🖼️ Cấu hình thư mục static để load ảnh, CSS, JS
+
 spring.web.resources.static-locations=classpath:/static/
 
-# 🎨 Cấu hình Thymeleaf
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
