--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,15 @@
-
-spring.application.name=forddealer
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/forddb
-spring.datasource.username=root
-spring.datasource.password=
-
-
+spring.application.name=showroom
 spring.jpa.hibernate.ddl-auto=update
-
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 
 cloudinary.url=cloudinary://611153721671968:SM2mwu0xaRwI5Cmpfmqhc0mGQLY@dn6fnxsaz
 
-server.port=8081
+server.port=8080
 
 
 spring.web.resources.static-locations=classpath:/static/
