--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.jpa.show-sql=true
 
 cloudinary.url=cloudinary://611153721671968:SM2mwu0xaRwI5Cmpfmqhc0mGQLY@dn6fnxsaz
 
-server.port=8080
+
+server.port=${PORT:8080}
 
 
 spring.web.resources.static-locations=classpath:/static/
